[gd_scene load_steps=6 format=2]

[ext_resource path="res://Towers/LaserTower.gd" type="Script" id=1]
[ext_resource path="res://Towers/data/000.png" type="Texture" id=2]
[ext_resource path="res://Towers/data/005-trimmed.png" type="Texture" id=3]
[ext_resource path="res://Towers/LaserBeam.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 142.733

[node name="LaserTower" type="Node2D" index="0"]

script = ExtResource( 1 )
sight_range = 200
rot_speed = 0.1
DAMAGE = 10
COST = 25
LASER_COLOR = Color( 1, 0, 0, 1 )
MAX_LEVEL = 3

[node name="tower" type="Sprite" parent="." index="0"]

scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -15, -48 )
_sections_unfolded = [ "Material", "Offset", "Transform", "Visibility" ]

[node name="targetting_laser" type="RayCast2D" parent="tower" index="0"]

visible = false
position = Vector2( -0.201324, -2.2769 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, -200 )
collision_mask = 1

[node name="turret" type="Sprite" parent="tower" index="1"]

show_behind_parent = true
position = Vector2( -0.17568, -9.66207 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2.5, -25 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="LaserBeam" parent="tower/turret" index="0" groups=[
"source",
] instance=ExtResource( 4 )]

[node name="turret2" type="Sprite" parent="tower" index="2"]

visible = false
show_behind_parent = true
position = Vector2( -10, -7 )
rotation = 0.0933435
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2.5, -25 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="LaserBeam" parent="tower/turret2" index="0" groups=[
"source",
] instance=ExtResource( 4 )]

visible = false

[node name="turret3" type="Sprite" parent="tower" index="3"]

visible = false
show_behind_parent = true
position = Vector2( 9, -7 )
rotation = -0.100359
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2.5, -25 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="LaserBeam" parent="tower/turret3" index="0" groups=[
"source",
] instance=ExtResource( 4 )]

[node name="SensorRange" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorRange" index="0"]

shape = SubResource( 1 )

[node name="FireTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[connection signal="area_entered" from="SensorRange" to="." method="_on_SensorRange_area_entered"]

[connection signal="area_exited" from="SensorRange" to="." method="_on_SensorRange_area_exited"]

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]


